--- a/package.json
+++ b/package.json
@@ -22,12 +22,12 @@
     "vuex": "^3.1.3"
   },
   "devDependencies": {
-    "@vue/cli-plugin-babel": "^4.3.1",
-    "@vue/cli-plugin-eslint": "^4.3.1",
     "babel-eslint": "^10.1.0",
     "eslint": "^6.8.0",
     "eslint-plugin-vue": "^6.2.2",
+    "fibers": "^4.0.2",
     "node-sass": "^4.13.1",
+    "sass": "^1.26.3",
     "sass-loader": "^8.0.2",
     "scp2": "^0.5.0"
   }
