--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "milesolar-web-seo",
+  "name": "milesolar-web",
   "version": "1.0.0",
   "description": "My priceless Nuxt.js project",
   "author": "gumtrip",
