--- a/package.json
+++ b/package.json
@@ -20,7 +20,9 @@
     "element-ui": "^2.13.1",
     "nuxt": "^2.0.0",
     "qs": "^6.9.3",
-    "vue": "^2.6.11"
+    "swiper": "^5.3.8",
+    "vue": "^2.6.11",
+    "vue-awesome-swiper": "^4.1.1"
   },
   "devDependencies": {
     "babel-eslint": "^10.1.0",
